changes probably not live, but working

--- a/adding-to-json/index.html
+++ b/adding-to-json/index.html
@@ -18,7 +18,7 @@
 </body>
 <script>
 
-    $.getJSON('databaze.json',function(data){
+    $.getJSON('admin/databaze.json',function(data){
         console.log(data);
 
         var output = '<ul>';
